// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workflow.md scaffold > TypeScript project with Vercel deployment and no CI config 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Workflow — test-project

## Key Facts
**Detected:** Deploy: Vercel

## Commands
**Detected:** Build: \`npm run build\`
**Detected:** Test: \`npm run test\`
**Detected:** Lint: \`npm run lint\`
**Detected:** Dev: \`npm run dev\`

## Environment
**Detected:** .env file exists: no
**Detected:** .env.example exists: no
**Detected:** .gitignore covers .env: no

## CI/CD
## Open Questions
**Unexamined:** Branching strategy, merge vs rebase, branch naming conventions
**Unexamined:** Commit message format, conventional commits, scope/type
**Unexamined:** Review process, approval requirements, PR templates
**Unexamined:** Build pipeline, test automation, deployment triggers
**Unexamined:** Environments (dev/staging/prod), rollback procedure

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`workflow.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Workflow — test-project

## Key Facts

## Commands

## Environment
**Detected:** .env file exists: no
**Detected:** .env.example exists: no
**Detected:** .gitignore covers .env: no

## CI/CD
## Open Questions
**Unexamined:** Branching strategy, merge vs rebase, branch naming conventions
**Unexamined:** Commit message format, conventional commits, scope/type
**Unexamined:** Review process, approval requirements, PR templates
**Unexamined:** Build pipeline, test automation, deployment triggers
**Unexamined:** Environments (dev/staging/prod), rollback procedure

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`workflow.md scaffold > rich project with full deployment and CI config 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Workflow — test-project

## Key Facts
**Detected:** Default branch: main
**Detected:** Commits: 142, Contributors: 4
**Detected:** Last activity: 2026-03-18T15:30:00Z
**Detected:** Deploy: AWS

## Commands
**Detected:** Build: \`docker build .\`
**Detected:** Test: \`pytest\`
**Detected:** Lint: \`ruff check .\`
**Detected:** Dev: \`uvicorn src.main:app --reload\`

## Environment
**Detected:** .env file exists: no
**Detected:** .env.example exists: no
**Detected:** .gitignore covers .env: no

## CI/CD
**Detected:** \`.github/workflows/\` — CI/CD workflows

## Open Questions
**Unexamined:** Branching strategy, merge vs rebase, branch naming conventions
**Unexamined:** Commit message format, conventional commits, scope/type
**Unexamined:** Review process, approval requirements, PR templates
**Unexamined:** Build pipeline, test automation, deployment triggers
**Unexamined:** Environments (dev/staging/prod), rollback procedure

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
